[gd_scene load_steps=2 format=3 uid="uid://bf7ipeymg7bat"]

[ext_resource type="Script" path="res://components/dev_info_tag/dev_info_tag.gd" id="1_5544r"]

[node name="DevInfoTag" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 300.0
grow_vertical = 0
script = ExtResource("1_5544r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="StateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "State"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Info
Info
Info"
horizontal_alignment = 1
